package lab.modelo.enums;

public enum EstadoLote {
	PENDIENTE, ACEPTADO, RECHAZADO, FINALIZADO
}
