package lab.modelo.enums;

public enum Turno {
	MADRUGADA, MAÑANA, TARDE
}
